--- a/Day 1/Index.html
+++ b/Day 1/Index.html
@@ -15,24 +15,65 @@
       <div class="weather">
         <img src="images/rain.png" alt="rain" class="weather-icon" />
         <h1 class="temp">22°c</h1>
-        <h2 class="city">New jersy</h2>
+        <h2 class="city">New York</h2>
         <div class="details">
-            <div class="col">
-                <img src="images/humidity.png" alt="">
-                <div>
-                    <p class="humidity">50%</p>
-                    <p>Humidity</p>
-                </div>
+          <div class="col">
+            <img src="images/humidity.png" alt="humidity" />
+            <div>
+              <p class="humidity">50%</p>
+              <p>Humidity</p>
             </div>
-            <div class="col">
-                <img src="images/wind.png" alt="">
-                <div>
-                    <p class="wind">15 km/h</p>
-                    <p>Wind Speed</p>
-                </div>
+          </div>
+          <div class="col">
+            <img src="images/wind.png" alt="" />
+            <div>
+              <p class="wind">15 km/h</p>
+              <p>Wind Speed</p>
             </div>
+          </div>
         </div>
       </div>
     </div>
+    <script>
+      const apikey = "d9c6d811a8242f3ff70b6b3b788f5822";
+      const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+
+      const searchBox = document.querySelector(".search input");
+      const searchBtn = document.querySelector(".search button");
+      const weatherIcon = document.querySelector(".weather-icon")
+
+      async function checkWeather(city) {
+        const response = await fetch(apiUrl + city + `&appid=${apikey}`);
+        var data = await response.json();
+
+        console.log(data);
+
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+        document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+        document.querySelector(".wind").innerHTML = data.wind.speed + " Km/h";
+
+        if(data.weather[0].main == "clouds"){
+            weatherIcon.src = "images/clouds.png";
+        }
+        else if(data.weather[0].main == "clear"){
+            weatherIcon.src = "images/clear.png";
+        }
+        else if(data.weather[0].main == "rain"){
+            weatherIcon.src = "images/rain.png";
+        }
+        else if(data.weather[0].main == "drizzle"){
+            weatherIcon.src = "images/drizzle.png";
+        }
+        else if(data.weather[0].main == "mist"){
+            weatherIcon.src = "images/mis.png";
+        }
+      }
+
+      searchBtn.addEventListener("click", ()=>{
+        checkWeather(searchBox.value);
+      })
+
+    </script>
   </body>
 </html>
